--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
           "type": "shell",
           "command": "./help/build.sh",
           "presentation": {
-            "reveal": "silent",
+            "reveal": "always",
             "panel": "shared"
           },
           "options": {
