--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
     },
     "editor.wordWrap": "wordWrapColumn",
     "editor.wrappingIndent": "same",
-    "editor.wordWrapColumn": 80
+    "editor.wordWrapColumn": 80,
+    "cSpell.words": [
+        "Vicon"
+    ]
 }
