--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,8 @@
             "panel": "shared"
           },
           "options": {
-            "cwd": "${workspaceFolder}"
+            "cwd": "${workspaceFolder}",
+            "ContinueOnError": true
           }
         }
       ]
