--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "editor.wrappingIndent": "same",
     "editor.wordWrapColumn": 80,
     "cSpell.words": [
+        "Bertl",
         "Vicon"
     ]
 }
